compiler/test/fail_compilation/ftimetrace.d
/**
REQUIRED_ARGS: -ftime-trace-granularity=-800
TEST_OUTPUT:
---
Error: `-ftime-trace-granularity` requires a positive number of microseconds
---
*/
